credentials-verification-web/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/io.iohk.cvp.wallet.WalletService" }
                          route:
                            cluster: wallet_service
                            max_grpc_timeout: 0s
                        - match: { prefix: "/io.iohk.connector.ConnectorService" }
                          route:
                            cluster: connector_service
                            max_grpc_timeout: 0s
                        - match: { prefix: "/io.iohk.cvp.cmanager.CredentialsService" }
                          route:
                            cluster: credentials_service
                            max_grpc_timeout: 0s
                        - match: { prefix: "/io.iohk.cvp.cmanager.StudentsService" }
                          route:
                            cluster: students_service
                            max_grpc_timeout: 0s
                      cors:
                        allow_origin:
                          - "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,userid,userId
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message,userid,userId
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router
  clusters:
    - name: wallet_service
      connect_timeout: 15s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
      hosts: [{ socket_address: { address: 192.168.3.113, port_value: 50052 }}]
    - name: connector_service
      connect_timeout: 15s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
      hosts: [{ socket_address: { address: 192.168.3.113, port_value: 50051 }}]
    - name: credentials_service
      connect_timeout: 15s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
      hosts: [{ socket_address: { address: 192.168.3.113, port_value: 50053 }}]
    - name: students_service
      connect_timeout: 15s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
      hosts: [{ socket_address: { address: 192.168.3.113, port_value: 50053 }}]
